--- a/lalala.html
+++ b/lalala.html
@@ -20,11 +20,40 @@
     </nav>
     <header>
         <div class="linha-cabecalho">
-            <h2>O melhor restaurante</h2>
-            <h2>Yume Sushi</h2>
-            <p>Nosso restaurante de sushi é um espaço acolhedor e moderno, onde a tradição japonesa encontra um toque contemporâneo. A decoração minimalista, com tons neutros de madeira e toques de verde com plantas naturais, cria um ambiente tranquilo e sofisticado. As mesas são dispostas de forma a proporcionar uma experiência íntima, seja para um jantar casual ou uma ocasião especial</p>
-            <a href="">Faça o seu pedido!</a>
+            <h2 style="letter-spacing: 15px;">O melhor restaurante</h2>
+            <h2 style="font-size: 70px;">Yume Sushi</h2>
+            <p>Nosso restaurante de sushi é um espaço acolhedor e moderno, onde a tradição japonesa encontra um toque contemporâneo. A decoração minimalista, com tons neutros de madeira e toques de verde com plantas naturais, cria um ambiente tranquilo e sofisticado.</p>
+            <a class="botaocontato" href="">Faça o seu pedido!</a>
+        </div>
+        <div class="imgcabecalho">
+            <img style="max-width: 100%;" src="img/8526bd7bcd3eba78b4847f3b7d166d36.jpg" alt="">
         </div>
     </header>
+    <div class="info">
+        <h2>Conheça mais sobre a culinária japonesa</h2>
+        <div class="culi">
+            <div class="card">
+                <img src="img/sushi (5).png" alt="">
+                <div class="card-text">
+                    <h3>Niguiri</h3>
+                    <p>Niguiri é um tipo de sushi japonês composto por uma bolinho de arroz temperado com vinagre, coberto com uma fatia de peixe ou frutos do mar, frequentemente servido com um toque de wasabi entre o arroz e o peixe.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/uramaki.png" alt="">
+                <div class="card-text">
+                    <h3>Temaki</h3>
+                    <p>Temaki é um tipo de sushi em forma de cone, feito com uma folha de alga nori recheada com arroz, peixe ou frutos do mar, legumes e outros ingredientes, geralmente consumido com as mãos.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/sushi-roll.png" alt="">
+                <div class="card-text">
+                    <h3>Sashimi</h3>
+                    <p>Sashimi é um prato japonês composto por fatias finas de peixe cru ou outros frutos do mar, servidos sem arroz. É consumido geralmente com molho de soja, wasabi e gengibre.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
