--- a/lalala.html
+++ b/lalala.html
@@ -12,8 +12,8 @@
             <h1>Yume Sushi</h1>
         </div>
         <div class="menu">
-            <a href="">Home</a>
-            <a href="">Sobre nós</a>
+            <a href="lalala.html">Home</a>
+            <a href="sobrenos.html">Sobre nós</a>
             <a href="">Cardápio</a>
             <a id="botao" href="">Fale conosco</a>
         </div>
@@ -26,34 +26,72 @@
             <a class="botaocontato" href="">Faça o seu pedido!</a>
         </div>
         <div class="imgcabecalho">
-            <img style="max-width: 100%;" src="img/8526bd7bcd3eba78b4847f3b7d166d36.jpg" alt="">
+            <img style="max-width: 100%;" src="img/sushi 3.jpg" alt="">
         </div>
     </header>
     <div class="info">
-        <h2>Conheça mais sobre a culinária japonesa</h2>
+        <h2>conheça mais sobre a culinária japonesa</h2>
         <div class="culi">
             <div class="card">
-                <img src="img/sushi (5).png" alt="">
+                <img src="img/salmon.png" alt="">
                 <div class="card-text">
                     <h3>Niguiri</h3>
                     <p>Niguiri é um tipo de sushi japonês composto por uma bolinho de arroz temperado com vinagre, coberto com uma fatia de peixe ou frutos do mar, frequentemente servido com um toque de wasabi entre o arroz e o peixe.</p>
                 </div>
-            </div>
-            <div class="card">
-                <img src="img/uramaki.png" alt="">
-                <div class="card-text">
-                    <h3>Temaki</h3>
-                    <p>Temaki é um tipo de sushi em forma de cone, feito com uma folha de alga nori recheada com arroz, peixe ou frutos do mar, legumes e outros ingredientes, geralmente consumido com as mãos.</p>
+                <div class="textooculto">
+                    <p>Nigiri (ou nigiri sushi) é um tipo de sushi tradicional da culinária japonesa, composto por uma pequena bolinho de arroz temperado com vinagre (shari) e coberto por uma fatia de peixe ou outro ingrediente, geralmente cru, embora também possa ser cozido ou defumado.</p>
                 </div>
             </div>
             <div class="card">
-                <img src="img/sushi-roll.png" alt="">
+                <img src="img/temaki.png" alt="">
+                <div class="card-text">
+                    <h3>Temaki</h3>
+                    <p>Temaki é um tipo de sushi em forma de cone, feito com uma folha de alga nori recheada com arroz, peixe ou frutos do mar, legumes e outros ingredientes, geralmente consumido com as mãos. Algumas pessoas dizem ser bom.</p>
+                </div>
+                <div class="textooculto">
+                    <p>Temaki é um tipo de sushi japonês que se caracteriza por ser uma versão informal e prática de sushi, servida em forma de cone. A palavra temaki (手巻き) pode ser traduzida como "sushi enrolado à mão", uma vez que, ao contrário de outros tipos de sushi, o temaki é feito para ser segurado com as mãos e não com hashis </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/sashimi.png" alt="">
                 <div class="card-text">
                     <h3>Sashimi</h3>
-                    <p>Sashimi é um prato japonês composto por fatias finas de peixe cru ou outros frutos do mar, servidos sem arroz. É consumido geralmente com molho de soja, wasabi e gengibre.</p>
+                    <p>Sashimi é um prato japonês composto por fatias finas de peixe cru ou outros frutos do mar, servidos sem arroz. É consumido geralmente com molho de soja, wasabi e gengibre. Um prato apreciado por sua delicadeza e sabor puro do peixe fresco.</p>
+                </div>
+                <div class="textooculto">
+                    <p>Sashimi é um prato tradicional da culinária japonesa que consiste em fatias finas de peixe ou frutos do mar crus, servidos sem arroz. A palavra "sashimi" (刺身) em japonês significa "corpo cortado" ou "carne cortada", refletindo a forma como o alimento é preparado, com cortes precisos para realçar a textura e o sabor do peixe ou marisco.</p>
                 </div>
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-contato">
+                <h2>Contato</h2>
+                <p><strong>Endereço</strong>: Rua exemplo, 123 - Caxias do Sul</p>
+                <p><strong>Telefone</strong>: (54) 91234-5678</p>
+                <p><strong>E-mail</strong>: yumesushi@gmail.com</p>
+            </div>
+            <div class="footer-hora">
+                <h2>Horários de funcionamento</h2>
+                <p>Segunda à Sexta: 11h - 22h</p>
+                <p>Sábado: 12h - 23h</p>
+                <p>Domingo: 12h - 21h</p>
+            </div>
+            <div class="footer-midia">
+                <h2>Siga-nos</h2>
+                <a href="#" target="_blank"><img src="img/facebook.png" alt=""></a>
+                <a href="#" target="_blank"><img src="img/instagram.png" alt=""></a>
+                <a href="#" target="_blank"><img src="img/twitter.png" alt=""></a>
+                </div>
+                <div class="footer-mapa">
+            <h2>Localização</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27870.94172601841!2d-51.232480984375016!3d-29.168570199999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951ea3200efac6ed%3A0x7cd369232232c419!2sSenac%20Caxias%20do%20Sul!5e0!3m2!1spt-BR!2sbr!4v1732646888619!5m2!1spt-BR!2sbr" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="footer-botton">
+                <p>&copy; 2024 Yume Sushi. Todos os direitos reservados.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
