--- a/lalala.html
+++ b/lalala.html
@@ -14,7 +14,7 @@
         <div class="menu">
             <a href="lalala.html">Home</a>
             <a href="sobrenos.html">Sobre nós</a>
-            <a href="">Cardápio</a>
+            <a href="cardapio.html">Cardápio</a>
             <a id="botao" href="">Fale conosco</a>
         </div>
     </nav>
